@@ -3,6 +3,8 @@ package com.agh.hydra.common.model;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 
+import static java.util.Optional.ofNullable;
+
 @Getter
 @RequiredArgsConstructor
 public enum Language {
@@ -12,4 +14,11 @@ public enum Language {
     PL("pl");
 
     private final String lowerCase;
+
+    public static Language from(String value) {
+        return ofNullable(value)
+                .map(String::toUpperCase)
+                .map(Language::valueOf)
+                .orElse(null);
+    }
 }
