@@ -8,6 +8,7 @@ import java.util.Set;
 import java.util.function.Function;
 
 import static java.util.Collections.emptyList;
+import static java.util.Objects.nonNull;
 import static java.util.Optional.ofNullable;
 import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
@@ -21,5 +22,9 @@ public class CollectionUtils {
 
     public static <T, E> Set<T> mapSet(Collection<E> collection, Function<E, T> function){
         return ofNullable(collection).orElse(emptyList()).stream().map(function).collect(toSet());
+    }
+
+    public static boolean haveSameElements(Collection<?> a, Collection<?> b) {
+         return nonNull(a) && nonNull(b) && a.size() == b.size() && a.containsAll(b) && b.containsAll(a);
     }
 }
