@@ -4,6 +4,7 @@ package com.agh.hydra.common.util;
 import com.agh.hydra.common.model.ValueObject;
 import lombok.experimental.UtilityClass;
 
+import java.util.function.Function;
 
 import static java.util.Optional.ofNullable;
 
@@ -12,5 +13,9 @@ public class ValueObjectUtil {
 
     public static <T> T getValue(ValueObject<T> object){
         return ofNullable(object).map(ValueObject::getValue).orElse(null);
+    }
+
+    public static <T, V extends ValueObject<T>> V valueObject(T value, Function<T, V> mapper){
+        return ofNullable(value).map(mapper).orElse(null);
     }
 }
