@@ -1,13 +1,20 @@
 package com.agh.hydra.register;
 
 
+import com.agh.hydra.api.register.model.Company;
 import com.agh.hydra.api.register.request.CompaniesRequest;
 import com.agh.hydra.api.register.request.UpdateCompaniesRequest;
 import com.agh.hydra.api.register.service.ICompanyService;
 import com.agh.hydra.common.documentation.BaseDocumentation;
+import com.agh.hydra.common.documentation.BasePageDocumentation;
 import com.agh.hydra.common.model.UserId;
+import io.swagger.annotations.ApiParam;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PageableDefault;
+import org.springframework.lang.Nullable;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import springfox.documentation.annotations.ApiIgnore;
@@ -27,6 +34,7 @@ public class RegisterController {
     static final String REGISTER_CONTEXT = "/register";
     private static final String COMPANY_UPDATE = "/company/update";
     private static final String COMPANY_INVALIDATE = "/company/invalidate";
+    private static final String COMPANY_COMPANIES = "/company/companies";
 
     private final ICompanyService companyService;
 
@@ -43,5 +51,12 @@ public class RegisterController {
     public void invalidateCompanies(@Valid @NotNull @RequestBody CompaniesRequest request,
                                     @ApiIgnore @RequestAttribute UserId userId) {
         companyService.invalidateCompanies(request, userId);
+    }
+
+    @BasePageDocumentation
+    @PostMapping(COMPANY_COMPANIES)
+    public Page<Company> getCompanies(@ApiParam @Valid @Nullable @RequestBody CompaniesRequest request,
+                                      @ApiIgnore @PageableDefault Pageable pageable) {
+        return companyService.getCompanies(request, pageable);
     }
 }
